feat: update dependencies to fixed versions and add new packages
feat: enhance socket.io connection with reconnection settings and add no-data handling

feat: add no-data message and refresh button in the UI for better user experience

chore: create server-diagnosis.js for debugging incoming temperature data

fix: improve error handling and logging in server.js for temperature data processing

feat: add simulate-data.js to generate random temperature data for testing

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
           <div class="temperature-display">
             <span id="current-temp">--</span>
             <span class="unit">°C</span>
+            <div class="no-data-message" id="no-data-message" style="display: none;">
+              <p>No temperature data available</p>
+              <button id="refresh-data" class="refresh-button">Refresh</button>
+            </div>
           </div>
           <div class="last-updated">
             Last updated: <span id="last-updated">Never</span>
