feat: enhance UI with new styles and layout adjustments; implement scaling for better responsiveness and update chart colors for improved visibility

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ESP32 Environment Monitor Dashboard</title>
+  <link href="https://fonts.cdnfonts.com/css/arcane-nine" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>ESP32 Environment Monitor Dashboard</h1>
+      <h1>ESP32 RETRO MONITOR</h1>
     </header>
     
     <main>
@@ -77,7 +78,7 @@
     </main>
     
     <footer>
-      <p>ESP32 Environment Monitor | BME280 Sensor</p>
+      <p>ESP32 RETRO MONITOR | BME280 SENSOR</p>
     </footer>
   </div>
 
