feat: adicionar controle de ventilador ao ESP32 com API HTTP; implementar simulação de dados e interface de controle; atualizar dependências e documentação

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,20 @@
             </div>
           </div>
         </div>
+
+        <div class="card sensor-card fan-card">
+          <h2>Ventilador</h2>
+          <div class="fan-control">
+            <img src="fan-circled-svgrepo-com.svg" alt="Ventilador" class="fan-icon" id="fan-icon">
+            <label class="toggle-switch">
+              <input type="checkbox" id="fan-toggle">
+              <span class="slider round"></span>
+            </label>
+          </div>
+          <div class="fan-status">
+            <span id="fan-status">Desligado</span>
+          </div>
+        </div>
         
         <div class="no-data-message" id="no-data-message" style="display: none;">
           <p>No sensor data available</p>
