feat: implementar controle automático do ventilador baseado na temperatura; adicionar interface para ativação/desativação do controle automático e atualizar a lógica de controle no ESP32 e servidor

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,9 @@
           </div>
           <div class="fan-status">
             <span id="fan-status">Desligado</span>
+            <div class="auto-control">
+              <button id="auto-status" class="auto-badge">Auto: Desativado</button>
+            </div>
           </div>
         </div>
         
